# cuda_playground

./: CMakeLists.txt  README.md
src/: cpu_project.cpp  gpu_project.cpp  hello.cpp
src/cuda/: kernel.cu  kernel.cuh  project_kernel.cu  project_kernel.cuh
